--- a/Views/ClientSearch.xaml
+++ b/Views/ClientSearch.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Class="SAKD.Views.ClientSearch"
+﻿<Controls:MetroWindow x:Class="SAKD.Views.ClientSearch"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         Title="Клиентті таңдау" Height="450" Width="800" WindowStyle="ToolWindow">
     <Grid>
         <StackPanel>
@@ -21,4 +22,4 @@
             </StackPanel>
         </StackPanel>
     </Grid>
-</Window>
+</Controls:MetroWindow>
