--- a/Views/CreditsPage.xaml
+++ b/Views/CreditsPage.xaml
@@ -1,10 +1,11 @@
-﻿<Window x:Class="SAKD.Views.CreditsPage"
+﻿<Controls:MetroWindow x:Class="SAKD.Views.CreditsPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SAKD.Views"
         mc:Ignorable="d" WindowStyle="None"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         Title="CreditsPage" Height="250" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -25,4 +26,4 @@
         <Button Content="Авто несие" Grid.Column="3" Grid.Row="1" Margin="5"/>
         <Label Grid.Column="1" Grid.ColumnSpan="3" Grid.Row="2" FontSize="12" Content="Copyright 2019" HorizontalContentAlignment="Center"/>
     </Grid>
-</Window>
+</Controls:MetroWindow>
