--- a/Views/LoginPage.xaml
+++ b/Views/LoginPage.xaml
@@ -1,10 +1,11 @@
-﻿<Window x:Class="SAKD.Views.LoginPage"
+﻿<Controls:MetroWindow x:Class="SAKD.Views.LoginPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModels="clr-namespace:SAKD.ViewModels"
         mc:Ignorable="d"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         Title="LoginPage" Height="300" Width="500" WindowStyle="None">
     <Window.DataContext>
         <viewModels:LoginViewModel/>
@@ -42,4 +43,4 @@
             </Grid>
         </Border>
     </Grid>
-</Window>
+</Controls:MetroWindow>
