--- a/Views/ClientSearch.xaml
+++ b/Views/ClientSearch.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="Клиентті таңдау" Height="450" Width="800" WindowStyle="ToolWindow">
+        Title="Клиентті таңдау" Width="400" WindowStyle="ToolWindow" Height="365">
     <Grid>
         <StackPanel>
             <Label Content="ИИН" Margin="5"/>
@@ -17,7 +17,7 @@
             <Label Content="Әкесінің аты" Margin="5"/>
             <TextBox Text="{Binding PatronymicName}" Margin="5"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Content="Ok" Margin="5" Height="30" Width="70"/>
+                <Button Content="Ok" Margin="5" Height="30" Width="70" Command="{Binding OkCommand}"/>
                 <Button Click="ButtonBase_OnClick" Content="Болдырмау" Margin="5" Height="30" Width="70"/>
             </StackPanel>
         </StackPanel>
