--- a/Views/WorkSpace.xaml
+++ b/Views/WorkSpace.xaml
@@ -74,8 +74,9 @@
             </Grid>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="5,0,0,0">
-            <Button Content="Қосу" Background="Green" Margin="5" Width="70"/>
+            <Button Content="Қосу" Background="Green" Margin="5" Width="70" Command="{Binding AddCommand}"/>
             <Button Content="Іздеу" Margin="5" Width="70" Command="{Binding SearchCommand}"/>
+            <Button Content="Өзгерту" Margin="5" Width="70"/>
             <Button Content="Шығару" Margin="5" Width="70"/>
             <Button Content="Жаңалау" Margin="5" Width="70"/>
         </StackPanel>
