--- a/Views/WorkSpace.xaml
+++ b/Views/WorkSpace.xaml
@@ -6,6 +6,7 @@
         mc:Ignorable="d"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:converters="clr-namespace:SAKD.Converters"
+        WindowState="Maximized"
         Title="Жұмыс аймағы" Height="450" Width="800">
 
     <Controls:MetroWindow.Resources>
