--- a/Views/Anketa.xaml
+++ b/Views/Anketa.xaml
@@ -119,7 +119,7 @@
                                 <Label Grid.Column="0" Grid.Row="9" Content="Cashback сомасы"/>
                                 <TextBox Grid.Column="1" Grid.Row="9" Text="{Binding CashbackSum}"/>
                                 <Label Grid.Column="0" Grid.Row="10" Content="Комиссиялар"/>
-                                <DataGrid Grid.Column="1" Grid.Row="10" ItemsSource="{Binding Comissions}">
+                                <DataGrid Grid.Column="1" Grid.Row="10" AutoGenerateColumns="False" ItemsSource="{Binding Comissions}">
                                     <DataGrid.Columns>
                                         <DataGridTextColumn Header="Атауы" Binding="{Binding ComissionType.Name}"/>
                                         <DataGridTextColumn Header="Бір рет қана" Binding="{Binding ComissionType.SingleTime}"/>
@@ -129,6 +129,22 @@
                                     </DataGrid.Columns>
                                 </DataGrid>
                             </Grid>
+                        </GroupBox>
+                        <GroupBox Header="Қосымша қызметтер">
+                            <StackPanel>
+                                <DataGrid ItemsSource="{Binding AdditionalServices}" AutoGenerateColumns="False">
+                                    <DataGrid.Columns>
+                                        <DataGridTextColumn Header="Код" Binding="{Binding Service.Code}"/>
+                                        <DataGridTextColumn Header="Қызмет атауы" Binding="{Binding Service.Name}"/>
+                                        <DataGridTextColumn Header="Сомасы" Binding="{Binding Price}"/>
+                                        <DataGridTextColumn Header="Пайыз" Binding="{Binding Percent}"/>
+                                    </DataGrid.Columns>
+                                </DataGrid>
+                                <StackPanel Orientation="Horizontal">
+                                    <Button Content="Қосу" Command="{Binding AddServiceCommand}"/>
+                                    <Button Content="Өзгерту" Command="{Binding EditServiceCommand}"/>
+                                </StackPanel>
+                            </StackPanel>
                         </GroupBox>
                     </StackPanel>
                 </ScrollViewer>
