--- a/Views/WorkSpace.xaml
+++ b/Views/WorkSpace.xaml
@@ -1,17 +1,17 @@
-﻿<Controls:MetroWindow x:Class="SAKD.Views.WorkSpace"
+﻿<controls:MetroWindow x:Class="SAKD.Views.WorkSpace"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:converters="clr-namespace:SAKD.Converters"
         WindowState="Maximized"
         Title="Жұмыс аймағы" Height="450" Width="800">
 
-    <Controls:MetroWindow.Resources>
+    <controls:MetroWindow.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis" />
-    </Controls:MetroWindow.Resources>
+    </controls:MetroWindow.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
@@ -82,4 +82,4 @@
             <Button Content="Жаңалау" Margin="5" Width="70"/>
         </StackPanel>
     </Grid>
-</Controls:MetroWindow>
+</controls:MetroWindow>
